new file:   js/filters.js

--- a/views/form.html
+++ b/views/form.html
@@ -1,6 +1,5 @@
-<md-content class="md-padding">
-   
-  <md-nav-bar md-selected-nav-item="$state.current.name" nav-bar-aria-label="navigation links">
+<md-content class="md-padding">   
+  <md-nav-bar md-selected-nav-item="currentstate" nav-bar-aria-label="navigation links">
     <md-nav-item md-nav-click="" name="form.customer" ui-sref=".customer">Customer</md-nav-item>
     <md-nav-item md-nav-click="" name="form.baseplan" ui-sref=".baseplan" ng-disabled="setDisable('baseplan')">Base Plan</md-nav-item>
     <md-nav-item md-nav-click="" name="form.rider" ui-sref=".rider" ng-disabled="setDisable('rider')">Rider</md-nav-item>
