--- a/views/form/baseplan.html
+++ b/views/form/baseplan.html
@@ -21,7 +21,7 @@
             <md-card-content>
                 <div layout-gt-xs="row">
                     <md-input-container class="md-block" flex-gt-xs> <label>Product</label>
-                        <md-icon>wc</md-icon>
+                        <md-icon> </md-icon>
                         <md-select name="productid" ng-model="baseObj.product.productid">
                             <md-option ng-repeat="n in  getProductList();" ng-value="n.productid">
                                 {{n.productid}}
@@ -29,7 +29,7 @@
                         </md-select>
                     </md-input-container>
                     <md-input-container class="md-block" flex-gt-xs> <label>Plan</label>
-                        <md-icon>wc</md-icon>
+                        <md-icon></md-icon>
                         <md-select name="planid" ng-model="baseObj.product.planid">
                             <md-option ng-repeat="n in getPlanList(baseObj.product.productid)" ng-value="n.planid">
                                 {{n.planid}}
@@ -37,12 +37,18 @@
                         </md-select>
                     </md-input-container>
                 </div>
-                <div ng-bind-html="html($parent.plan.template)" compile-template></div>
-
-                <div ng-include="getTemplate($parent.plan.code)" ng-if="$parent.plan!=null"></div>
+                <div layout-gt-xs="row">
+                    <md-input-container class="md-block" flex-gt-xs>  
+                        <label>Face amount</label>
+                        <md-icon> </md-icon>                         
+                        <input ng-model="baseObj.product.faceamount">                           
+                        </md-input> 
+                    </md-input-container>      
                 </div>
+                <div layout-gt-xs="row" ng-if="isBasicPlan(baseObj.product.productid, baseObj.product.planid)">
+                    Add field
+                </div>               
             </md-card-content>
         </md-card>
-
     </section>
 </md-content>
