--- a/views/form/rider.html
+++ b/views/form/rider.html
@@ -1,4 +1,6 @@
-<md-content >
+<md-content  class="md-padding">
+    <div ng-include="'views/form/cards/customersection.html'"></div>
+    <div ng-include="'views/form/cards/plansection.html'"></div>
     Rider 2
     State:{{$current}}
     {{getRiderList('ADAM', 'ADM02')}}
