--- a/views/form/cards/plansection.html
+++ b/views/form/cards/plansection.html
@@ -7,7 +7,7 @@
         </md-card-title>
         <md-card-content>
             <div layout="row">
-                <div flex>{{'plantype' | translate}}: {{ p.productid}}</div>
+                <div flex>{{'product' | translate}}: {{ p.productid}}</div>
                 <div flex>{{'plancode' | translate}}: {{p.planid}}</div>
             </div>
         </md-card-content>
