--- a/views/form.html
+++ b/views/form.html
@@ -1,18 +1,18 @@
 <md-content class="md-padding">
   <md-nav-bar md-selected-nav-item="currentstate" nav-bar-aria-label="navigation links">
-    <md-nav-item md-nav-click="" name="form.customer" ui-sref=".customer">Customer</md-nav-item>
-    <md-nav-item md-nav-click="" name="form.baseplan" ui-sref=".baseplan" ng-disabled="setDisable('baseplan')">Base Plan</md-nav-item>
-    <md-nav-item md-nav-click="" name="form.rider" ui-sref=".rider" ng-disabled="setDisable('rider')">Rider</md-nav-item>
-    <md-nav-item md-nav-click="" name="form.summary" ui-sref=".summary" ng-disabled="setDisable('rider')">Summary</md-nav-item>
+    <md-nav-item md-nav-click="" name="form.customer" ui-sref=".customer">{{'customer'|translate}}</md-nav-item>
+    <md-nav-item md-nav-click="" name="form.baseplan" ui-sref=".baseplan" ng-disabled="setDisable('baseplan')">{{'baseplan'|translate}}</md-nav-item>
+    <md-nav-item md-nav-click="" name="form.rider" ui-sref=".rider" ng-disabled="setDisable('rider')">{{'rider'|translate}}</md-nav-item>
+    <md-nav-item md-nav-click="" name="form.summary" ui-sref=".summary" ng-disabled="setDisable('rider')">{{'summary'|translate}}</md-nav-item>
   </md-nav-bar>
   <div class="container">
     <div ui-view></div>
   </div>
-  <div>
-    <md-toolbar>
-      <md-button class="md-raised md-primary" ng-click="saveState(title);">
-        Next
-      </md-button>
-    </md-toolbar>
+
+  <div layout="row" layout-align="end center">
+    <md-button class="md-raised md-primary" ng-click="saveState(title);">
+      {{'next' | translate}}
+    </md-button>
   </div>
+
 </md-content>
