--- a/views/form/rider.html
+++ b/views/form/rider.html
@@ -1,7 +1,7 @@
 <md-content  class="md-padding">
     <!--panel session //-->
     <div ng-include="'views/form/cards/customersection.html'"></div>
-    <div ng-include="'views/form/cards/plansection.html'"></div>
+    <div ng-include="'views/form/cards/plansection.html?a'"></div>
  
     <!--form //-->
     <div data-ng-repeat="r in baseObj.riders">              
