--- a/views/form/baseplan.html
+++ b/views/form/baseplan.html
@@ -22,9 +22,9 @@
                         </md-input-container>
                         <md-input-container class="md-block" flex-gt-xs> <label>Plan</label>
                             <md-icon></md-icon>
-                            <md-select name="planid" ng-model="baseObj.product.planid" ng-change="p = getPlan(baseObj.product.productid, baseObj.product.planid);">
+                            <md-select name="planid" ng-model="baseObj.product.planid" ng-change="selectedPlan = getPlan(baseObj.product.productid, baseObj.product.planid);">
                                 <md-option ng-repeat="n in getBaseProductPlans(baseObj.product.productid)" ng-value="n.plantype + '.' + n.planid">
-                                    OLD MCBL {{n.productid}} Regular Pay ({{n.deathbenefit}} - {{n.famultiplier}} x [{{n.currency}}]) Band 1 {{n.planid}}
+                                    OLD MCBL {{n.productid}} Regular Pay ({{n.deathbenefit}} - {{n.famultipliermin}} x {{n.famultipliermax}} x [{{n.currency}}]) Band 1 {{n.planid}}
                                 </md-option>
                             </md-select>
                         </md-input-container>
@@ -32,11 +32,10 @@
                     <!--demo//-->
 
                     <div layout-gt-xs="row">
-                     
-                        <md-input-container class="md-block" flex-gt-xs ng-if="p.currency!=null">
-                            <md-select name="currency" ng-model="baseObj.product.currency" ng-init="baseObj.product.currency=p.currency;"
+                        <md-input-container class="md-block" flex-gt-xs ng-if="selectedPlan.currency!=null">
+                            <md-select name="currency" ng-model="baseObj.product.currency" ng-init="baseObj.product.currency=selectedPlan.currency;"
                                 ng-disabled="true">
-                                <md-option ng-value="p.currency">{{p.currency}}</md-option>
+                                <md-option ng-value="selectedPlan.currency">{{selectedPlan.currency}}</md-option>
                             </md-select>
                         </md-input-container>
                         <md-input-container class="md-block" flex-gt-xs>
@@ -44,37 +43,32 @@
                             <input ng-model="baseObj.product.annualpremium">
                             </md-input>
                         </md-input-container>
-                        <md-input-container class="md-block" flex-gt-xs>
-                            <md-slider flex min="15" max="49" ng-model="baseObj.product.famultiplier" aria-label="red" id="famultiplier" ng-init="baseObj.product.famultiplier=20">
+                        <md-slider-container>                            
+                            <md-slider flex min="{{selectedPlan.famultipliermin}}" max="{{selectedPlan.famultipliermax}}" ng-model="baseObj.product.famultiplier" aria-label="red" id="famultiplier" ng-init="baseObj.product.famultiplier=20">
                             </md-slider>
-                            {{baseObj.product.famultiplier}}
-                        </md-input-container>
+                            <span>{{baseObj.product.famultiplier}}</span>
+                        </md-slider-container>
 
-                        <md-input-container class="md-block" flex-gt-xs ng-if="baseObj.product.annualpremium != null">
+                        <md-input-container class="md-block" flex-gt-xs>
                             <label>{{'faceamount'|translate}}</label>
-                            <input ng-model="baseObj.product.faceamount" ng-value="baseObj.product.annualpremium * baseObj.product.famultiplier" disabled>
+                            <input ng-model="baseObj.product.faceamount" ng-value="baseObj.product.annualpremium * baseObj.product.famultiplier" type="number"
+                                disabled>
                             </md-input>
                         </md-input-container>
                     </div>
                     <div layout-gt-xs="row" ng-if="(getProduct(baseObj.product.productid).amounttype==null)">
                         <md-input-container class="md-block" flex-gt-xs>
                             <label>{{'deathbenefit'|translate}}</label>
-                            <md-select name="currency" ng-model="baseObj.product.deathbenefit" ng-init="baseObj.product.deathbenefit=p.deathbenefit" ng-disabled="true">
-                                <md-option ng-value="p.deathbenefit">{{p.deathbenefit}}</md-option>
+                            <md-select name="currency" ng-model="baseObj.product.deathbenefit" ng-init="baseObj.product.deathbenefit=selectedPlan.deathbenefit"
+                                ng-disabled="true">
+                                <md-option ng-value="selectedPlan.deathbenefit">{{selectedPlan.deathbenefit}}</md-option>
                             </md-select>
                         </md-input-container>
                     </div>
 
 
                     <!--demo//-->
-                    <div layout-gt-xs="row" ng-if="(getProduct(baseObj.product.productid).amounttypee!=null)">
-                        {{'views/form/baseplan/' + getProduct(baseObj.product.productid).amounttype + '.html'}}
-                        <div ng-include="'views/form/baseplan/' + getProduct(baseObj.product.productid).amounttype + '.html'"></div>
-                    </div>
-                    <!--additional fields//-->
-                    <div layout-gt-xs="row" ng-if="isBasicPlan(baseObj.product.productid, baseObj.product.planid)">
-                        <div ng-include="'customizations/baseplan/' + isBasicPlan(baseObj.product.productid, baseObj.product.planid) + '.html'"></div>
-                    </div>
+
                 </md-card-content>
             </md-card>
         </section>
