--- a/views/form/customer.html
+++ b/views/form/customer.html
@@ -8,15 +8,15 @@
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content>
-                    <div layout-gt-xs="row">
-                        <md-input-container class="md-block" flex-gt-xs>
+                    <div layout="row">
+                        <md-input-container class="md-block" flex=20>
                             <label>Title</label>
                             <md-select name="title" ng-model="s.title" required>
                                 <md-option value="MR">Mr</md-option>
                                 <md-option value="MS">Ms</md-option>
                             </md-select>
                         </md-input-container>
-                        <md-input-container class="md-block" flex-gt-xs>
+                        <md-input-container class="md-block" flex=40>
                             <label>Surname</label>
                             <input ng-model="s.surname" required>
                             <div ng-messages="s.surname.$error" role="alert">
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
                         </md-input-container>
-                        <md-input-container class="md-block" flex-gt-xs>
+                        <md-input-container class="md-block" flex=40>
                             <label>Given</label>
                             <input ng-model="s.given" required>
                             <div ng-messages="s.given.$error" role="alert">
@@ -35,22 +35,22 @@
                             </div>
                         </md-input-container>
                     </div>
-                    <div layout-gt-sm="row">
-                        <md-input-container class="md-block " flex-gt-xs>
+                    <div layout="row">
+                        <md-input-container class="md-block " flex=20>
                             <label>Date of Birth</label>
                             <md-datepicker ng-model="s.dob " md-current-view="year " required> </md-datepicker>
                         </md-input-container>
-                        <md-input-container class="md-block " flex-gt-xs>
+                        <md-input-container class="md-block " flex=20>
                             Age: {{ s.dob | Age }}
                         </md-input-container>
-                        <md-input-container class="md-block " style="align:center" flex-gt-xs>
+                        <md-input-container class="md-block " flex=20>
                             <p>Gender</p>
                             <md-radio-group name="gender " ng-model="s.gender " aria-required=" ">
                                 <md-radio-button value="Male ">Male</md-radio-button>
                                 <md-radio-button value="Female ">Female</md-radio-button>
                             </md-radio-group>
                         </md-input-container>
-                        <md-input-container class="md-block" flex-gt-xs>
+                        <md-input-container class="md-block" flex=40>
 
                             <p>Smoking Status</p>
                             <md-radio-group ng-model="s.smoking" ng-init="s.smoking='S'" ng-disabled="true" ">
@@ -61,11 +61,11 @@
                         </md-input-container>
                     </div>
                     <div layout-gt-xs="row ">
-                        <md-input-container class="md-block " flex-gt-xs>
+                        <md-input-container class="md-block " flex=50>
                             <label>Mobile (optional)</label>
                             <md-icon>phone</md-icon><input ng-model="s.phone ">
                         </md-input-container>
-                        <md-input-container class="md-block " flex-gt-xs>
+                        <md-input-container class="md-block " flex=50>
                             <label>Email (optional)</label>
                             <md-icon>email</md-icon><input ng-model="s.email " type="email ">
                         </md-input-container>
