--- a/views/form/cards/plansection.html
+++ b/views/form/cards/plansection.html
@@ -8,7 +8,7 @@
         <md-card-content>
             <div layout="row">
                 <div flex>{{'product' | translate}}: {{ p.productid}}</div>
-                <div flex>{{'plancode' | translate}}: {{p.planid}}</div>
+                <div flex>{{'plancode' | translate}}: {{p.planname}}</div>
             </div>
         </md-card-content>
     </md-card>
