--- a/views/form/cards/productsection.html
+++ b/views/form/cards/productsection.html
@@ -1,4 +1,4 @@
-<section ng-init="p = baseObj.product">
+<section >
     <md-card>
         <md-card-title>
             <md-card-title-text>
@@ -7,8 +7,8 @@
         </md-card-title>
         <md-card-content>
             <div layout="row">
-                <div flex>{{'product' | translate}}: {{ p.productid}}</div>
-                <div flex>{{'plancode' | translate}}: {{p.planname}}</div>
+                <div flex>{{'product' | translate}}: {{ data.productid}}</div>
+                <div flex>{{'plancode' | translate}}: {{data.planname}}</div>
             </div>
         </md-card-content>
     </md-card>
