--- a/views/list.html
+++ b/views/list.html
@@ -1,5 +1,7 @@
 <md-button ui-sref="form.customer">Create Proposal</md-button>
 <md-content class="md-padding" style="background-color:EEE" flex="auto" layout="row">
+    <w3TestDirective ng-model="stateObj"></w3TestDirective>
+     
     <div flex-gt-sm="50" flex class="md-padding">
         <md-toolbar layout="row">
             <div class="md-toolbar-tools">
